# sync-engine

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  Dockerfile  Dockerfile-dev  Dockerfile.minio  README.md  Vagrantfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  minio_entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_frozen.txt  requirements_lint.txt  setup.cfg  setup.py  setup.sh  tini-install.sh
.circleci/: artifacts.html  config.yml
.github/: dependabot.yml
.github/workflows/: build-and-release.yaml  build-arm64.yaml  codeql.yml
etc/: config-dev.json  config-docker-dev.json  config-test.json  secrets-dev.yml  secrets-docker-dev.yml  secrets-test.yml
inbox/: __init__.py  basicauth.py  config.py  console.py  constants.py  crispin.py  error_handling.py  exceptions.py  folder_edge_cases.py  glibc_malloc.py  greenlet_like.py  ignition.py  instrumentation.py  interruptible_threading.py  logging.py  malloc_trim.py  providers.py  thread_inspector.py  uid_set.py
inbox/actions/: base.py
inbox/api/: err.py  filtering.py  kellogs.py  metrics_api.py  ns_api.py  sending.py  srv.py  update.py  validation.py  wsgi.py
inbox/auth/: __init__.py  base.py  generic.py  gmail.py  google.py  microsoft.py  oauth.py  utils.py
inbox/client/: __init__.py  client.py  errors.py  restful_model_collection.py  restful_models.py  util.py
inbox/contacts/: abc.py  algorithms.py  carddav.py  crud.py  google.py  icloud.py  processing.py  remote_sync.py  search.py  vcard.py
inbox/events/: __init__.py  abstract.py  google.py  ical.py  microsoft_graph_client.py  recurring.py  remote_sync.py  timezones.py  util.py
inbox/heartbeat/: config.py  status.py  store.py
inbox/logging/: __init__.py
inbox/mailsync/: frontend.py  gc.py  service.py
inbox/models/: __init__.py  account.py  action_log.py  base.py  block.py  calendar.py  category.py  constants.py  contact.py  data_processing.py  event.py  folder.py  label.py  message.py  meta.py  metadata.py  mixins.py  namespace.py  roles.py  search.py  secret.py  session.py  thread.py  transaction.py  util.py  when.py
inbox/s3/: base.py  exc.py
inbox/scheduling/: deferred_migration.py  event_queue.py  queue.py
inbox/search/: base.py
inbox/security/: blobstorage.py  oracles.py
inbox/sendmail/: __init__.py  base.py  generic.py  gmail.py  message.py
inbox/sqlalchemy_ext/: json_util.py  util.py
inbox/sync/: base_sync.py
inbox/test/: __init__.py  conftest.py
inbox/transactions/: actions.py  delta_sync.py  search.py
inbox/util/: __init__.py  addr.py  blockstore.py  concurrency.py  db.py  debug.py  encoding.py  file.py  fleet.py  hook.py  html.py  itert.py  logging_helper.py  misc.py  rdb.py  sharding.py  startup.py  stats.py  testutils.py  threading.py  url.py
inbox/webhooks/: google_notifications.py  gpush_notifications.py  microsoft_notifications.py
local_wheels/: README.md
migrations/: env.py
migrations/versions/: 000_g_msgid_g_thrid_as_integers.py  001_rename_message_id_to_message_id_header.py  002_store_g_thrid_as_biginteger_instead_of_.py  003_expand_littlejson.py  004_drafts_as_required_folder.py  005_import_old_accounts.py  006_add_search_tokens.py  007_per_provider_table_split.py  008_store_userinfo_from_oauth.py  009_multiple_contact_providers.py  010_store_raw_contact_data.py  011_use_server_default.py  012_move_google_userinfo_fields_to_.py  013_add_spool_msg.py  014_contact_ranking_signals.py  015_generalize_from_sender_header_field.py  016_extra_transaction_data.py  017_haspublicid.py  018_message_contact_association.py  019_blocks_to_parts.py  020_store_webhook_parameters.py  021_add_references_column_to_message_table.py  022_store_imapuid_msg_uid_as_biginteger_.py  022_webhooks_and_filters.py  023_tighten_nullable_constraints_on_.py  024_remote_folders_and_inbox_tags_split.py  025_remove_user_sharedfolder_and_usersession.py  026_add_audit_timestamps_to_all_objects.py  027_imapuid_soft_deletes.py  028_tag_api_migration.py  029_set_inbox_folder_exposed_name.py  030_add_is_read_attribute_to_messages.py  031_add_indexes_to_timestamps.py  032_tighten_easuid.py  033_add_more_indexes.py  034_cascade_folder_deletes_to_imapuid.py  035_add_columns_for_drafts_support_to_.py  036_replace_usertag_by_generic_tag.py  037_shorten_addresses.py  038_add_public_ids_to_transactions.py  (+351 more)
nylas/: __init__.py
nylas/api/: wsgi.py
nylas/logging/: __init__.py  log.py
nylas/util/: debug.py
requirements/: lint.txt  prod.txt  profile.txt  requirements-dev.in  requirements-dev.txt  requirements-lint.in  requirements-lint.txt  requirements-pip.in  requirements-pip.txt  requirements-prod.in  requirements-prod.txt  requirements-test.in  requirements-test.txt  test.txt
scripts/: pip-compile-all.sh
src/inbox/: config.py  constants.py  error_handling.py  folder_edge_cases.py  interruptible_threading.py
tests/: __init__.py  conftest.py  pytest.ini  test_instrumentation.py  test_interruptible_threading.py  test_logging.py  test_misc.py  test_sqlalchemy_ext.py  test_uid_set.py
tests/api/: base.py  conftest.py  test_account.py  test_auth.py  test_calendars.py  test_contacts.py  test_data_processing.py  test_drafts.py  test_event_participants.py  test_event_when.py  test_events.py  test_events_recurring.py  test_files.py  test_filtering.py  test_folders.py  test_folders_labels.py  test_invalid_account.py  test_messages.py  test_metrics_api.py  test_searching.py  test_sending.py  test_srv.py  test_streaming.py  test_threads.py  test_validation.py  test_views.py
tests/auth/: test_generic_auth.py  test_gmail_auth.py  test_imap_smtp_auth.py  test_utils.py
tests/contacts/: test_process_mail.py  test_remote_sync.py
tests/events/: test_create.py  test_create_and_update.py  test_datetime.py  test_events_util.py  test_google_events.py  test_ics_parsing.py  test_inviting.py  test_merge.py  test_microsoft_graph_client.py  test_recurrence.py  test_rsvp.py  test_sync.py  test_util.py
tests/general/: test_account.py  test_address_canonicalization.py  test_category.py  (+18 more)
(+257 files in other folders)
