[project]
name = "sync-engine"
version = "0.1.0"
description = "Self-hosted email syncing service"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "arrow==0.17.0",
    "attrs==23.1.0",
    "authalligator-client",
    "boto3==1.35.50",
    "ciso8601==2.2.0",
    "colorlog==6.5.0",
    "dnspython==2.6.1",
    "flanker",
    "flask-restful==0.3.9",
    "flask==2.2.5",
    "gunicorn==22.0.0",
    "html2text==2020.1.16",
    "icalendar==4.0.9",
    "imapclient==2.2.0",
    "ipython==8.10.0",
    "json-log-formatter==1.0",
    "limitlion==0.10.0",
    "lxml==5.1.0",
    "more-itertools>=10.6.0",
    "mysqlclient==2.2.5",
    "pympler==0.9",
    "pynacl==1.5.0",
    "python-dateutil==2.8.2",
    "pytz==2021.3",
    "pyyaml==6.0.2",
    "redis==5.0.2",
    "requests==2.32.3",
    "rollbar==0.16.2",
    "setuptools==75.2.0",
    "sqlalchemy==1.4.54",
    "statsd==3.3.0",
    "structlog==21.4.0",
    "tldextract==3.1.2",
    "urllib3==1.26.20",
    "vobject==0.9.6.1",
    "zstandard==0.23.0",
    "setproctitle==1.2.2",
    "werkzeug==3.0.6",
    "alembic==1.7.5",
]

[project.urls]
homepage = "https://github.com/closeio/sync-engine"
source = "https://github.com/closeio/sync-engine"
changelog = "https://github.com/closeio/sync-engine/blob/main/CHANGELOG.md"

[tool.uv.sources]
flanker = { url = "https://github.com/closeio/flanker-new/archive/fa272d95345d45e8bb1f9bc32bc2c074bf52a484.zip" }
authalligator-client = { url = "https://github.com/closeio/authalligator-client/archive/e7cc8e0bc5b1f2285ab5997e2590a8eb056fc627.zip" }

[tool.hatch.build.targets.wheel]
packages = ["src/inbox"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "freezegun==1.5.1",
    "hypothesis==6.113.0",
    "mockredispy==2.9.3",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.3.1",
    "pytest==8.3.4",
    "responses==0.25.3",
    "black>=25.1.0",
]

[tool.pytest.ini_options]
norecursedirs = [
    "inbox",
    "tests/imap/network",
    "tests/data",
]
timeout = 60
filterwarnings = [
    # We are stuck on mysqlclient==1.3.14, which is the last version that supports gevent.
    # We would need to change mysqlclient to another MySQL driver to get rid of those.
    # MySQLdb/connections.py:276: DeprecationWarning: PY_SSIZE_T_CLEAN will be required for '#' formats
    # MySQLdb/connections.py:384: DeprecationWarning: PY_SSIZE_T_CLEAN will be required for '#' formats
    # MySQLdb/cursors.py:387: DeprecationWarning: PY_SSIZE_T_CLEAN will be required for '#' formats
    "ignore:PY_SSIZE_T_CLEAN will be required",
    # MySQLdb/__init__.py:85: DeprecationWarning: waiter is deprecated and will be removed in 1.4.
    "ignore:waiter is deprecated and will be removed",
]
markers = [
    "networkrequired: needs internet access",
]

[tool.black]
skip-magic-trailing-comma = true
target-version = ["py312"]
line-length = 79

[tool.ruff]
target-version = "py312"
line-length = 79
preview = true
force-exclude = true

[tool.ruff.lint]
explicit-preview-rules = true
ignore = [
    # Missing docstrings
    "D1",
    # One-line docstring should fit on one line with quotes.
    # We ignore this because it's OK to buy yourself a few extra characters
    # for the summary line even if the summary line is *the only* line.
    "D200",
    # 1 blank line required between summary line and description. We ignore
    # this because we have quite a few docstrings where the summary is
    # multi-line.
    "D205",
    # Multi-line docstring summary should start at the first line.
    # We ignore this because we agreed in #20553 that we we want to put the
    # summary line below """ for multi-line docstrings.
    "D212",
    # First line should end with a period. We ignore this because we have
    # multi-line summaries.
    "D400",
    # First line should end with a period, question mark, or exclamation point.
    # We ignore this because we have multi-line summaries.
    "D415",
    "E501",
    "E741",
    # Exceptions named with Error
    "N818",
    # Return `bool(x)` instead of `if x: return True else return False`
    # This can result in awkward style inconsistency in functions with
    # multiple `if ...: return True/False` statements.
    "SIM103",
    # Use `x in dict` instead of `x in dict.keys()`
    # we like explicit .keys()
    "SIM118",
    # Ternary instead of assignment in if-else
    # Long ternary lines can be really ugly with black
    "SIM108",
    # Magic values, too draconian rule
    "PLR2004",
    # Too many branches
    "PLR0912",
    # Too many arguments to function call
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Too many returns
    "PLR0911",
    # Consider using `elif` instead of `else` then `if` to remove one indentation level
    # This is an explicit style choice
    "PLR5501",
    # `x == ""` can be simplified to `not x` as an empty string is falsey
    # This is an unsafe transformation, if x is None then the result is different
    "PLC1901",
    "B905",
    "B026",
    # No explicit `stacklevel` keyword argument found for warnings
    "B028",
    "G004",
    "PIE796",
    # Outer for loop variable `query` overwritten by inner assignment target
    "PLW2901",
    # Using the global statement to update `x` is discouraged
    "PLW0603",
    # Redefining argument with the local name
    "PLR1704",
    # TODO fix these
    # Fixture `x` does not return anything, add leading underscore
    "PT004",
    # Fixture `x` returns a value, remove leading underscore
    "PT005",
    # Fixture `x` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
    "PT019",
    # `pytest.raises(ValueError)` is too broad
    # ValueError is too specific to report on
    "PT011",
    # Splitext is used in S3 code
    "PTH122",
    # Enforce f-strings instead of .format
    # We want to allow .format calls too.
    "UP032",
    # Not ready for __future__ annotations
    "UP037",
]
select = [
    "A001",
    "ASYNC",
    "B",
    "D",
    "E",
    "F",
    "N",
    "SIM",
    "S110", # Exceptions must be logged in try-except-pass
    "S112", # Exceptions must be logged in try-except-continue
    "TID25",
    "TCH005",
    "W",
    "UP",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "PTH",
    "PT",
    "PL",
    "I",
    "INP",
    # noqa management
    "PGH004",
    # Static key in dict comprehension
    "RUF100",
    # f-string conversion flags
    "RUF010",
    # Quadratic list summation
    "RUF017",
    # prints and pdb import
    "T",
    # Unnecessarily verbose raise
    "TRY201",
    # Useless try-except-raise
    "TRY302",
    # Annotations
    "ANN201",
    "ANN204",
    "ANN205",
    "ANN206",
    # Executable files vs shebangs
    "EXE",
    # Explicit `None` returns
    "RET501",
    "RET502",
    "RET503",
    "S608",
]
unfixable = [
    # Variable assigned but never used - automatically removing the assignment
    # is annoying when running autofix on work-in-progress code.
    "F841",
]

[tool.ruff.lint.per-file-ignores]
"bin/**.py" = ["T201", "E402", "N999"]
"migrations/**.py" = ["T201", "E402"]
"tests/**.py" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict_equality = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_context = true
enable_error_code = [
    "unused-awaitable",
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "ignore-without-code",
    "truthy-iterable",
    "truthy-bool",
]
pretty = true
files = [
    "bin",
    "inbox",
    "migrations",
]
namespace_packages = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
